Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-18604

Debugger: Cannot attach to running when using Quick Application

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 4.4.0
    • Qt Creator 4.4.0-beta1
    • Debugger
    • macOS 10.12, Xcode 8.3 / Ubuntu 16.04,
      QC 4.4 beta snapshots
    • 7a341fa9b5ac123cdc4ec0484aa1e01f6b10344a

      Steps to reproduce:

      • open/create Qt Quick Application
      • build and run the application
      • on Application Output pane use the 'Attach debugger to this process'

      Current result:

      • connection to the Qml Debugger seems to impossible

      Note: normal (pure C++) debugging works on macOS and Linux.

        For Gerrit Dashboard: QTCREATORBUG-18604
        # Subject Branch Project Status CR V

            hjk hjk
            cstenger Christian Stenger
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes