Debugger: Fix attaching via app output pane

Task-number: QTCREATORBUG-18604
Change-Id: Id41f3fe1bf08965cfdaf21a7059fc2f1db49ecc7
Reviewed-by: Orgad Shaneh <orgads@gmail.com>
Reviewed-by: Christian Stenger <christian.stenger@qt.io>